@@ -306,7 +306,7 @@ ItemType id[] =
 	 -1,0,
 	 I_LASSO,1, 0,
 	 0, NULL, 0},
-	{"galley","galleys","GLLY",
+	{"Galley","Galleys","GLLY",
 	 ItemType::NOTRANSPORT,
 	 "SHIP",1,25,1, {{I_WOOD,1}, {-1,0},{-1,0},{-1,0}},
 	 NULL,0,0, {{-1,0},{-1,0},{-1,0},{-1,0}},
@@ -315,7 +315,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0, 0,
 	 0, NULL, 0},
-	{"clipper","clippers","CLIP",
+	{"Clipper","Clippers","CLIP",
 	 ItemType::NOTRANSPORT,
 	 "SHIP",3,50,1, {{I_WOOD,1}, {-1,0},{-1,0},{-1,0}},
 	 NULL,0,0, {{-1,0},{-1,0},{-1,0},{-1,0}},
@@ -324,7 +324,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0, 0,
 	 0, NULL, 0},
-	{"trireme","triremes","TRIR",
+	{"Trireme","Triremes","TRIR",
 	 ItemType::NOTRANSPORT,
 	 "SHIP",1,60,1, {{I_WOOD,1}, {-1,0},{-1,0},{-1,0}},
 	 NULL,0,0, {{-1,0},{-1,0},{-1,0},{-1,0}},
@@ -333,7 +333,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0, 0,
 	 0, NULL, 0},
-	{"galleon","galleons","GLON",
+	{"Galleon","Galleons","GLON",
 	 ItemType::NOTRANSPORT,
 	 "SHIP",2,75,1, {{I_WOOD,1}, {-1,0},{-1,0},{-1,0}},
 	 NULL,0,0, {{-1,0},{-1,0},{-1,0},{-1,0}},
@@ -342,7 +342,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0, 0,
 	 0, NULL, 0},
-	{"balloon","balloons","BALL",
+	{"Balloon","Balloons","BALL",
 	 ItemType::NOTRANSPORT,
 	 "SHIP",5,50,1, {{I_FLOATER,1}, {-1,0},{-1,0},{-1,0}},
 	 NULL,0,0, {{-1,0},{-1,0},{-1,0},{-1,0}},
@@ -351,7 +351,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0, 0,
 	 0, NULL, 0},
-	{"zeppelin","zeppelins","ZEPP",
+	{"Zeppelin","Zeppelins","ZEPP",
 	 ItemType::NOTRANSPORT | ItemType::DISABLED,
 	 "SHIP",5,60,1, {{I_FLOATER,1}, {I_IRONWOOD,1},{-1,0},{-1,0}},
 	 NULL,0,0, {{-1,0},{-1,0},{-1,0},{-1,0}},
@@ -360,7 +360,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0, 0,
 	 0, NULL, 0},
-	{"armored galleon","armored galleons","ARGL",
+	{"Armored Galleon","Armored Galleons","ARGL",
 	 ItemType::NOTRANSPORT,
 	 "SHIP",3,75,1, {{I_IRONWOOD,1}, {-1,0},{-1,0},{-1,0}},
 	 NULL,0,0, {{-1,0},{-1,0},{-1,0},{-1,0}},
